--- a/application.yml
+++ b/application.yml
@@ -1,25 +1,16 @@
+server:
+  port: 8191
 spring:
-  datasource:
-    url: jdbc:mysql://localhost:3306/rentDB?createDatabaseIfNotExist=true
-    username: root
-    password: 1qazxsw2#
-    driver-class-name: com.mysql.jdbc.Driver
-    application-name : discovery
-    
-  jpa:
-    hibernate:
-      naming:
-        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/krish/spring-cloud-config
+          search-paths:
+           - '*service'
 
-server :
-  port : 8082
-  
-eureka :
-  instance :
-    hostname : localhost
     
-  client :
-     serviceUrl :
-        defaultZone : http://localhost:8082/eureka/
-     register-with-eureka : false
-     fetch-registry : false 
+
+
+
+ 
